ui improvements and working multiplayer

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,61 +6,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Jogo da Velha</title>
+    <script src="https://kit.fontawesome.com/a16d431142.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header>
-        <div>
-            MENU
-            <button id="exit-game" class='hidden'>Sair</button>
+    <div id="splash">
+        <h1>Jogo da Velha</h1>
+        <div class="logo"></div>
+        <div class="buttons-container">
+            <button id="start-btn" class="text-btn">Iniciar</button>
+            <!-- <button class="text-btn">Inglês</button> -->
         </div>
-        <h1 id="title">Jogo da Velha</h1>
-        <h3 id="status" class="hidden status"> </h3>
+    </div>
+    <header id="menu">
+        <button id="play-again-game" class='icon-btn hidden'>
+            <i class="fa-solid fa-rotate"></i>
+        </button>
+        <button id="exit-game" class='icon-btn hidden'>
+            <i class="fa-solid fa-person-running"></i>
+        </button>
+        <button id="config" class='icon-btn hidden'>
+            <i class="fa-solid fa-gear"></i>
+        </button>
+        <button id="music" class='icon-btn'>
+            <span class="fa-stack">
+                <i class="fa-solid fa-music fa-stack-1x"></i>
+                <i id="music-off" class="fa-solid fa-ban fa-stack-2x hidden" style="color:Tomato"></i>
+            </span>
+        </button>
+        <button id="sound-fx" class='icon-btn'>
+            <span class="fa-stack">
+                <i class="fa-solid fa-volume-high fa-stack-1x"></i>
+                <i id="sound-fx-off" class="fa-solid fa-ban fa-stack-2x hidden" style="color:Tomato"></i>
+            </span>
+        </button>
     </header>
+
     <main>
-        <div id="main-panel">
-            <h3>Escolha uma das opções</h3>
-            <div id="buttons">
-                <button id="PVP-local">Jogador x Jogador</button>
-                <button id="PVC">Jogador x Computador </button>
-                <button id="PVP-online">Multiplayer</button>
-
+        <section id="main-panel">
+            <div class="logo"></div>
+            <div class="buttons-container">
+                <button id="PVP-offline" class="text-btn">
+                    <i class="fa-solid fa-user fa-xl"></i> 
+                    <i class="fa-solid fa-x"></i> 
+                    <i class="fa-solid fa-user fa-xl"></i>
+                </button>
+                <button id="PVC" class="text-btn">
+                    <i class="fa-solid fa-user fa-xl"></i> 
+                    <i class="fa-solid fa-x"></i> 
+                    <i class="fa-solid fa-robot fa-xl"></i>
+                </button>
+                <button id="PVP-online" class="text-btn">
+                    <i class="fa-solid fa-user fa-xl"></i> 
+                    <i class="fa-solid fa-x"></i> 
+                    <i class="fa-solid fa-users fa-xl"></i>
+                </button>
             </div>
-        </div>
-        <div id="game-panel" class="hidden">
-            <section id="player1-area" class="player-area">
-                <h2 id="player1-timer" class="status">0:59</h2>
-                <h2 id="player1-name" class="name">Player 1 ❌</h2>
-                <h2 id="player1-avatar" class="avatar">🐶</h2>
-            </section>
+        </section>
 
-            <section id="board-area" class="board">
+        <section id="game-panel" class="">
+            <h3 id="status"></h3>
+            <div id="timer">0:00</div>
+            <div id="game-area">
+                <section id="player1-area" class="player-area">
+                    <img id="player1-avatar" class="avatar" src="/images/avatars/nun-face.png">
+                    <h2 id="player1-name" class="name">Player 1 ❌</h2>
+                </section>
 
-                <div class="row">
-                    <div id="1-1" class="cell">-</div>
-                    <div id="1-2" class="cell">-</div>
-                    <div id="1-3" class="cell">-</div>
-                </div>
-                <div class="row">
-                    <div id="2-1" class="cell">-</div>
-                    <div id="2-2" class="cell">-</div>
-                    <div id="2-3" class="cell">-</div>
-                </div>
-                <div class="row">
-                    <div id="3-1" class="cell">-</div>
-                    <div id="3-2" class="cell">-</div>
-                    <div id="3-3" class="cell">-</div>
-                </div>
+                <section id="board-area" class="board">
 
-            </section>
-            <section id="player2-area" class="player-area">
-                <h2 id="player2-timer" class="status">0:59</h2>
-                <h2 id="player2-name" class="name">Player 2 ⭕</h2>
-                <h2 id="player2-avatar" class="avatar">🐱</h2>
+                    <div class="row">
+                        <div id="0-0" class="cell">-</div>
+                        <div id="0-1" class="cell">-</div>
+                        <div id="0-2" class="cell">-</div>
+                    </div>
+                    <div class="row">
+                        <div id="1-0" class="cell">-</div>
+                        <div id="1-1" class="cell">-</div>
+                        <div id="1-2" class="cell">-</div>
+                    </div>
+                    <div class="row">
+                        <div id="2-0" class="cell">-</div>
+                        <div id="2-1" class="cell">-</div>
+                        <div id="2-2" class="cell">-</div>
+                    </div>
 
-            </section>
-
-        </div>
+                </section>
+                <section id="player2-area" class="player-area">
+                    <img id="player2-avatar" class="avatar" src="/images/avatars/witch-face.png">
+                    <h2 id="player2-name" class="name">Player 2 ⭕</h2>
+                </section>
+            </div>
     </main>
 </body>
 
